stackTemp.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Amazon Kubernetes VPC - Public subnets'

Parameters:

  VpcBlock:
    Type: String
    Default: 192.168.0.0/16
    Description: The CIDR range for the VPC. This should be a valid private (RFC 1918) CIDR range.

  PublicSubnet01Block:
    Type: String
    Default: 192.168.10.0/24
    Description: CidrBlock for public subnet 01 within the VPC

  PublicSubnet02Block:
    Type: String
    Default: 192.168.20.0/24
    Description: CidrBlock for public subnet 01 within the VPC

  KeyName:
    Type: "AWS::EC2::KeyPair::KeyName"
    Description: The EC2 Key Pair to allow SSH access to the instances
    Default: "project-key"

  NodeImageId:
    Type: String
    Default: myami
    Description: (Optional) Specify your own custom image ID. This value overrides any AWS Systems Manager Parameter Store value specified above.


Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:  !Ref VpcBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-VPC'

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"

  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Public Subnets
      - Key: Network
        Value: Public

  PublicRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 01
    Properties:
      Tags:
      - Key: Purpose
        Value: AMI
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet01Block
      VpcId:
        Ref: VPC


  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 02
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet02Block
      VpcId:
        Ref: VPC


  PublicSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet02
      RouteTableId: !Ref PublicRouteTable

  OpexSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow kube-opex-analytics traffic to client host
      VpcId:
         Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 31082
        ToPort: 31082
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 31080
        ToPort: 31082
        CidrIp: 0.0.0.0/0

  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
      - Key: Purpose
        Value: AMI
      GroupDescription: Allow ssh traffic to client host
      VpcId:
         Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0

  mySimpleConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref NodeImageId
      KeyName: !Ref KeyName
      SecurityGroups:
      - !Ref SshSecurityGroup
      - !Ref OpexSecurityGroup
      - !GetAtt VPC.DefaultSecurityGroup
      InstanceType: t3.small

  WorkersASG:
    DependsOn: mySimpleConfig
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: WorkersAutoScalingGroup
      Tags:
        - Key: Type
          PropagateAtLaunch: True
          Value: Worker
      VPCZoneIdentifier:
        - !Ref PublicSubnet01
        - !Ref PublicSubnet02
      LaunchConfigurationName: !Ref mySimpleConfig
      MinSize: '1'
      DesiredCapacity: '3'
      MaxSize: '4'

  ControllersASG:
    DependsOn: mySimpleConfig
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: ControllersAutoScalingGroup
      Tags:
        - Key: Type
          PropagateAtLaunch: True
          Value: Controller
      VPCZoneIdentifier:
        - !Ref PublicSubnet01
        - !Ref PublicSubnet02
      LaunchConfigurationName: !Ref mySimpleConfig
      MinSize: '1'
      DesiredCapacity: '1'
      MaxSize: '1'


Outputs:

  PublicSubnet01Id:
    Description: PublicSubnet01 ID in the VPC
    Value: !Ref PublicSubnet01
    Export:
      Name: PublicSubnet01Id

  PublicSubnet02Id:
    Description: PublicSubnet02 ID in the VPC
    Value: !Ref PublicSubnet02
    Export:
      Name: PublicSubnet02Id

  SecurityGroup:
    Description: Security group for the cluster control plane communication with worker nodes
    Value: !GetAtt VPC.DefaultSecurityGroup
    Export:
      Name: SecurityGroupId

  SecurityGroupOpex:
    Description: Security group for the managed nodes to allow opex traffic
    Value: !Ref OpexSecurityGroup
    Export:
      Name: SecurityGroupOpexId

  SecurityGroupSsh:
    Description: Security group for the managed nodes to allow opex traffic
    Value: !Ref SshSecurityGroup
    Export:
      Name: SecurityGroupSshId

  VpcId:
    Description: The VPC Id
    Value: !Ref VPC
    Export:
      Name: VpcId
